evenframe_core/tests/snapshots/snapshot_tests__macroforge__macroforge_doc_comments.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
/** Application configuration settings */
/** @derive(Decode) */
export interface Config {
  /** The API key used for authentication */
  api_key: string;
  /** Request timeout in milliseconds */
  timeout_ms: number;
}

/** Severity levels for log output */
/** @derive(Decode) */
/** @endec({ externallyTagged: true }) */
export type LogLevel =
	| "Debug"
	| "Info"
	| "Warn"
	| "Error";
