evenframe_core/tests/snapshots/snapshot_tests__macroforge__macroforge_durations.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
/** @derive(Deserialize) */
export interface Timer {
  /** @serde({ validate: ["nonEmpty"] }) */
  id: string;
  /** @serde({ validate: ["lessThanOrEqualToDuration("8h")"] }) */
  limit: { secs: number; nanos: number };
  /** @serde({ validate: ["greaterThanDuration("1m")"] }) */
  grace: { secs: number; nanos: number } | null;
  laps: { secs: number; nanos: number }[];
}
