evenframe_core/tests/snapshots/snapshot_tests__macroforge__macroforge_enum_externally_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
/** @derive(Decode) */
/** @endec({ externallyTagged: true }) */
export type Status =
	| "Active"
	| "Inactive"
	| "Pending"
	| "Suspended";
