evenframe_core/tests/snapshots/snapshot_tests__macroforge__macroforge_enum_internally_tagged_inline.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
/** @derive(Deserialize) */
/** @serde({ tag: "type" }) */
export type Shape =
	| { type: "Circle" } & { radius: number; }
	| { type: "Rectangle" } & { width: number; height: number; }
	| { type: "Point" };
