evenframe_core/tests/snapshots/snapshot_tests__macroforge__macroforge_enum_partially_untagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
/** @derive(Decode) */
export interface Phone {
  number: string;
}

/** @derive(Decode) */
export interface Postal {
  street: string;
  city: string;
}

/** @derive(Decode) */
/** @endec({ untagged: true }) */
export type Contact =
	| { kind: "Phone" } & Phone
	| { kind: "Nobody" }
	| string
	| Postal;
