evenframe_core/tests/snapshots/snapshot_tests__macroforge__macroforge_enum_untagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
/** @derive(Decode) */
/** @endec({ untagged: true }) */
export type Value =
	| string
	| number
	| boolean
	| null;
