evenframe_core/tests/snapshots/snapshot_tests__macroforge__macroforge_enum_with_data_inline.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
/** @derive(Deserialize) */
export interface Coordinates {
  lat: number;
  lng: number;
}

/** @derive(Deserialize) */
/** @serde({ externallyTagged: true }) */
export type Location =
	| { Address: string }
	| { Coords: Coordinates }
	| { Inline: { label: string; value: number; } }
	| "Unknown";
