evenframe_core/tests/snapshots/snapshot_tests__macroforge__macroforge_foreign_types.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
/** @derive(Decode) */
export interface Appointment {
  id: string;
  title: string;
  scheduled_at: string;
  duration: number;
  cancelled_at: string | null;
}
